# file_cleaner

./: .gitignore  Cargo.toml  build.zig  build.zig.zon
src/: main.rs  main.zig
