[package]
name = "file_cleaner"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"

publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nohash-hasher = "0.2"

[profile.release]
strip = true
lto = true
panic = "abort"
codegen-units = 1
